EXTRA: sorting on backend by readAllUsers() with paging works
